# robocup_ur5e

./: .env  .gitignore  BUILD_FIX.md  BUILD_FIX_FINAL.md  BUILD_FIX_v2.md  BUILD_SUCCESS.md  CONTRIBUTING.md  DEPENDENCIES.md  GITHUB_PUSH_GUIDE.md  LEADER_CHECKLIST.md  LEADER_WORKFLOW.md  LICENSE  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_OLD.md  READY_TO_BUILD.md  READY_TO_PUSH.md  SETUP_GUIDE.md  START_HERE.md  TEAM_DEVELOPMENT_GUIDE.md  TEAM_README.md  build.sh  check_images.sh  check_status.sh  docker-compose.yml  fix_build.sh  launch.sh  launch_native.sh  push_to_github.sh  start.sh  verify_and_start.sh  verify_system.sh
data/: README.md
docker/: Dockerfile.brain  Dockerfile.grasp  Dockerfile.yolo
docs/: MODELS_AND_DATASETS.md  PUSH_NOW.md  README.md
scripts/: README.md  check_running.sh  status.sh  yolo26_gpu_rosbridge.py
src/common_msgs/: CMakeLists.txt  package.xml
src/common_msgs/msg/: DetectedObject.msg  GraspCandidate.msg  GraspResult.msg  MotionCommand.msg  ObjectScore.msg  PathPlanRequest.msg  TaskDecision.msg
src/motion_control/: CMakeLists.txt  package.xml
src/motion_control/config/: ur5e_config.yaml
src/motion_control/launch/: motion_control.launch
src/motion_control/nodes/: motion_control_node.py
src/path_planning/: package.xml
src/perception_grasp/: CMakeLists.txt  package.xml  requirements.txt
src/perception_grasp/config/: grasp_config.yaml
src/perception_grasp/launch/: grasp_estimator.launch
src/perception_grasp/nodes/: grasp_estimator_node.py
src/perception_yolo/: CMakeLists.txt  package.xml  requirements.txt
src/perception_yolo/config/: yolo_config.yaml
src/perception_yolo/launch/: yolo_detector.launch
src/perception_yolo/nodes/: yolo26_info_node.py  yolo_detector_node.py
src/robocup_brain/: CMakeLists.txt  package.xml
src/robocup_brain/launch/: brain.launch
src/robocup_brain/nodes/: brain_node.py  test_ur5e_control.py
weights/: README.md
